Ajustando paginas por renombres

--- a/src/partials/Advantages.html
+++ b/src/partials/Advantages.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../CSS/Advantages.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,7 +26,7 @@
       <article class="advantages_article">
         <p class="advantages__iconns">
           <svg width="50" height="50">
-            <use href=".././images/iconadvantages.svg#icon-frozen1"></use>
+            <use href="../images/iconadvantages.svg#icon-frozen1"></use>
           </svg>
         </p>
         <h3 class="advantages__tile advantages--title_1">721</h3>
@@ -37,7 +37,7 @@
       <article class="advantages_article">
         <p class="advantages__iconns">
           <svg width="50" height="50">
-            <use href=".././images/iconadvantages.svg#icon-frozen2"></use>
+            <use href="../images/iconadvantages.svg#icon-frozen2"></use>
           </svg>
         </p>
         <h3 class="advantages__tile advantages--title_2">16kg</h3>
@@ -46,7 +46,7 @@
       <article class="advantages_article">
         <p class="advantages__iconns">
           <svg width="44" height="50">
-            <use href=".././images/iconadvantages.svg#icon-frozen3"></use>
+            <use href="../images/iconadvantages.svg#icon-frozen3"></use>
           </svg>
         </p>
         <h3 class="advantages__tile advantages--title_3">84</h3>
