--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/contacts.css" />
+    <link rel="stylesheet" href="../CSS/contacts.css" />
   </head>
   <body>
     <section class="container">
