Añadiendo include y scss

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,7 @@
 @import './common';
 @import './example';
+@import "./Advantages.scss";
+@import "./contacts.scss";
+@import "./footer.scss";
+@import "./gallery.scss";
+@import "./products.scss";
