--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -11,8 +11,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
 
-    <link rel="stylesheet" href="../CSS/footer.css" />
-    <meta charset="utf=8" />
+    <link rel="stylesheet" href="../css/footer.css" />
+
     <title>FOOTER</title>
 
     <!-- tipo de letra -->
