--- a/css/styles.css
+++ b/css/styles.css
@@ -909,7 +909,7 @@ header>p {
 
 /*Media Query MOBILE START*/
 
-@media screen and (min-width:320px) {
+@media screen and (min-width:320px) and (max-width:420px) {
 
   body {
     font-size: 14px;
@@ -1004,7 +1004,7 @@ header>p {
     position: relative;
     padding-top: 37px;
     padding-bottom: 60px;
-    width: 320px;
+    width: 280px;
     margin: 0 auto;
   }
 
@@ -1731,7 +1731,7 @@ header>p {
 
 /*Media Query TABLET START*/
 
-@media screen and (min-width:768px) {
+@media screen and (min-width:420px) and (max-width:768px) {
 
   body {
     font-size: 14px;
@@ -1823,12 +1823,11 @@ header>p {
   .hero {
     background-image: url('/images/eat-icecream.png'), url('/images/icecream-header.png'), url('/images/Ellipse-pink3.png');
     background-size: 190px 150px, 143px 336px, 335px 333px;
-    background-repeat: no-repeat;
     background-position: bottom left 546px, top 80px left 322px, top 43px left 248px;
     position: relative;
-    padding-top: 37px;
-    padding-bottom: 60px;
-    width: 768px;
+    padding-top: 32px;
+    padding-bottom: 16px;
+    width: 704px;
     margin: 0 auto;
   }
 
