--- a/css/styles.css
+++ b/css/styles.css
@@ -909,7 +909,7 @@ header>p {
 
 /*Media Query MOBILE START*/
 
-@media screen and (min-width:320px) and (max-width:420px) {
+@media screen and (min-width:320px) and (max-width:480px) {
 
   body {
     font-size: 14px;
@@ -1731,7 +1731,7 @@ header>p {
 
 /*Media Query TABLET START*/
 
-@media screen and (min-width:420px) and (max-width:768px) {
+@media screen and (min-width:768px) {
 
   body {
     font-size: 14px;
