limitando cada sección

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,82 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- normalizador -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-    />
-
-    <link rel="stylesheet" href="../css/footer.css" />
-
-    <title>FOOTER</title>
-
-    <!-- tipo de letra -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&display=swap"
-      rel="stylesheet"
-    />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&family=Titan+One&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-
-  <body>
-    <footer class="container-footer">
-      <div class="columns-footer">
-        <div class="size-orientation">
-          <div class="size-homemade">
-            <h3 class="homemade">HOMEMADE ICE CREAM</h3>
-            <h3 class="Made">MADE</h3>
-          </div>
-          <div class="with-passion-orientation">
-            <h2>WITH</h2>
-            <h2>PASSION</h2>
-          </div>
+<section>
+  <footer class="container-footer">
+    <div class="columns-footer">
+      <div class="size-orientation">
+        <div class="size-homemade">
+          <h3 class="homemade">HOMEMADE ICE CREAM</h3>
+          <h3 class="Made">MADE</h3>
         </div>
-        <div class="second-column">
-          <section class="social-links">
-            <div class="circular-container">
-              <svg class="icon" width="20" height="20">
-                <!-- tamaño de la ventana de visualizacion se ajusta en view box y aca se modifica el tamaño de el svg-->
-                <use href="../images/iconsfooter.svg#icon-github"></use>
-              </svg>
-            </div>
-            <div class="circular-container">
-              <svg class="icon" width="20" height="20">
-                <!-- tamaño de la ventana de visualizacion se ajusta en view box y aca se modifica el tamaño de el svg-->
-                <use href="../images/iconsfooter.svg#icon-paper-plane"></use>
-              </svg>
-            </div>
-            <div class="circular-container">
-              <svg class="icon" width="20" height="20">
-                <!-- tamaño de la ventana de visualizacion se ajusta en view box y aca se modifica el tamaño de el svg-->
-                <use href="../images/iconsfooter.svg#icon-facebook22"></use>
-              </svg>
-            </div>
-          </section>
-
-          <div class="contacts">
-            <p>Feel free to contact</p>
-            <p class="number">+61(O)383 766 284</p>
-          </div>
+        <div class="with-passion-orientation">
+          <h2>WITH</h2>
+          <h2>PASSION</h2>
         </div>
       </div>
-      <div class="line"></div>
-      <div class="orientation">
-        <p class="registered1">© 2022 - IceCream.</p>
-        <p class="registered2">All Rights Reserved.</p>
+      <div class="second-column">
+        <section class="social-links">
+          <div class="circular-container">
+            <svg class="icon" width="20" height="20">
+              <!-- tamaño de la ventana de visualizacion se ajusta en view box y aca se modifica el tamaño de el svg-->
+              <use href="../images/iconsfooter.svg#icon-github"></use>
+            </svg>
+          </div>
+          <div class="circular-container">
+            <svg class="icon" width="20" height="20">
+              <!-- tamaño de la ventana de visualizacion se ajusta en view box y aca se modifica el tamaño de el svg-->
+              <use href="../images/iconsfooter.svg#icon-paper-plane"></use>
+            </svg>
+          </div>
+          <div class="circular-container">
+            <svg class="icon" width="20" height="20">
+              <!-- tamaño de la ventana de visualizacion se ajusta en view box y aca se modifica el tamaño de el svg-->
+              <use href="../images/iconsfooter.svg#icon-facebook22"></use>
+            </svg>
+          </div>
+        </section>
+
+        <div class="contacts">
+          <p>Feel free to contact</p>
+          <p class="number">+61(O)383 766 284</p>
+        </div>
       </div>
-    </footer>
-  </body>
-</html>
+    </div>
+    <div class="line"></div>
+    <div class="orientation">
+      <p class="registered1">© 2022 - IceCream.</p>
+      <p class="registered2">All Rights Reserved.</p>
+    </div>
+  </footer>
+</section>
