--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,19 +1,5 @@
-<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://unpkg.com/modern-normalize@1.1.0/modern-normalize.css">
-    <link rel="stylesheet" type="text/css" href="../CSS/products.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&family=Titan+One&display=swap" rel="stylesheet">
-    <title>Ice Cream</title>
-  </head>
-
-  <body class="container">
-    <main>
-      <div class="titles">
+<section class="container">  
+  <div class="titles">
       <p class="slogan"> 100% Natural</p> 
         <h2>PRODUCTS</h2> 
       </div>
@@ -22,7 +8,7 @@
       <div class="product-card"> 
         <img class="product-card-image" src="../images/icecream.jpg" alt="Strawberry ice cream cone">       
         <h3>ICE CREAM</h3>
-        <svg class="icon icon-products" width="370" height="6"> <use href="../images/iconsproducts.svg#icon-threedots"></use></svg></br>
+        <svg class=" icon icon-products" width="370" height="6"> <use href="../images/iconsproducts.svg#icon-threedots"></use></svg></br>
         <p class="product-card-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
              sed do eiusmod tempor incididunt ut labore et</p>
         <input class="button-arrow" type="image" src="../images/right-arrow.jpg" height="40" width="40"/>
@@ -47,7 +33,5 @@
            sed do eiusmod tempor incididunt ut labore et</p>
            <input class="button-arrow" type="image" src="../images/right-arrow.jpg" height="40" width="40"/>
     </div>
-</div>
-</main>
-</body>
-</html>
+ </div>
+</section>
