--- a/src/partials/Advantages.html
+++ b/src/partials/Advantages.html
@@ -4,7 +4,7 @@
       <article class="advantages_article">
         <p class="advantages__iconns">
           <svg width="50" height="50">
-            <use href="../images/iconadvantages.svg#icon-frozen1"></use>
+            <use href='./images/iconadvantages.svg#icon-frozen1'></use>
           </svg>
         </p>
         <h3 class="advantages__tile advantages--title_1">721</h3>
@@ -15,7 +15,7 @@
       <article class="advantages_article">
         <p class="advantages__iconns">
           <svg width="50" height="50">
-            <use href="../images/iconadvantages.svg#icon-frozen2"></use>
+            <use href='./images/iconadvantages.svg#icon-frozen2'></use>
           </svg>
         </p>
         <h3 class="advantages__tile advantages--title_2">16kg</h3>
@@ -24,7 +24,7 @@
       <article class="advantages_article">
         <p class="advantages__iconns">
           <svg width="44" height="50">
-            <use href="../images/iconadvantages.svg#icon-frozen3"></use>
+            <use href='./images/iconadvantages.svg#icon-frozen3'></use>
           </svg>
         </p>
         <h3 class="advantages__tile advantages--title_3">84</h3>
