--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -16,19 +16,19 @@
           <div class="circular-container">
             <svg class="icon" width="20" height="20">
               <!-- tamaño de la ventana de visualizacion se ajusta en view box y aca se modifica el tamaño de el svg-->
-              <use href="../images/iconsfooter.svg#icon-github"></use>
+              <use href="./images/iconsfooter.svg#icon-github"></use>
             </svg>
           </div>
           <div class="circular-container">
             <svg class="icon" width="20" height="20">
               <!-- tamaño de la ventana de visualizacion se ajusta en view box y aca se modifica el tamaño de el svg-->
-              <use href="../images/iconsfooter.svg#icon-paper-plane"></use>
+              <use href="./images/iconsfooter.svg#icon-paper-plane"></use>
             </svg>
           </div>
           <div class="circular-container">
             <svg class="icon" width="20" height="20">
               <!-- tamaño de la ventana de visualizacion se ajusta en view box y aca se modifica el tamaño de el svg-->
-              <use href="../images/iconsfooter.svg#icon-facebook22"></use>
+              <use href="./images/iconsfooter.svg#icon-facebook22"></use>
             </svg>
           </div>
         </section>
