--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -3,31 +3,31 @@
     <ul class="container">
       <li class="container__image container__image--center">
         <img
-          src="../images/picturesGallery/image1.png"
+          src="./images/picturesGallery/image1.png"
           class="container__picture"
           alt="imagen ilustrativa"
         />
       </li>
       <li class="container__image container__image--c">
         <img
-          src="../images/picturesGallery/image2.png"
+          src="./images/picturesGallery/image2.png"
           class="container__picture container__picture--bottom"
           alt="imagen ilustrativa"
         />
         <img
-          src="../images/picturesGallery/imagen3.png"
+          src="./images/picturesGallery/image3.png"
           class="container__picture"
           alt="imagen ilustrativa"
         />
       </li>
       <li class="container__image">
         <img
-          src="../images/picturesGallery/image4.png"
+          src="./images/picturesGallery/image4.png"
           class="container__picture container__picture--bottom container__picture--big"
           alt="imagen ilustrativa"
         />
         <img
-          src="../images/picturesGallery/image5.png"
+          src="./images/picturesGallery/image5.png"
           class="container__picture"
           alt="imagen ilustrativa"
         />
@@ -39,7 +39,7 @@
           alt="imagen ilustrativa"
         />
         <img
-          src="../images/picturesGallery/image7.png"
+          src="./images/picturesGallery/image7.png"
           class="container__picture"
           alt="imagen ilustrativa"
         />
