--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,6 +10,15 @@ body {
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+
+  background: white;
+  background-image: radial-gradient(rgba(0, 0, 0, 0.2) 1px, transparent 0);
+  background-size: 20px 20px;
+  background-position: -19px -19px;
+}
+
+ul {
+  padding: 0px;
 }
 
 #search-box {
@@ -17,4 +26,17 @@ body {
   padding: 8px;
   max-width: 320px;
   margin-bottom: 16px;
+}
+
+.country-list {
+  list-style: none;
+}
+
+.country-list > li {
+  display: flex;
+  align-items: center;
+}
+
+.country-list > li > img {
+  margin-right: 10px;
 }
