--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,42 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+
+  font-weight: bold;
+  font-size: 40px;
+  gap: 40px;
+  font-style: italic;
+}
+.label {
+  text-transform: lowercase;
+}
+
+.item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  gap: 60px;
+  margin-bottom: 50px;
+}
+.item button {
+  padding: 10px 40px;
+  border-radius: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  font-style: italic;
+}
+
+.item input {
+  padding: 10px 80px;
+  border-radius: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  font-style: italic;
+}
