--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -10,6 +10,7 @@
   margin: 0 auto;
 }
 .logo {
+  display: inline-block;
   padding-top: 8px;
   padding-left: 20px;
 }
@@ -77,6 +78,9 @@
   position: absolute;
   top: 83px;
   left: 36px;
+}
+.nav__button {
+  display: none;
 }
 
 .locations {
@@ -169,7 +173,7 @@
   }
 }
 
-.nav__button {
+.mobile-button {
   background: $white-color;
   border-radius: 22px;
   border: none;
@@ -186,9 +190,6 @@
   position: absolute;
   top: 58px;
   left: 58px;
-  &--desktop {
-    display: none;
-  }
 }
 .mobile-close {
   background-color: transparent;
@@ -206,6 +207,31 @@
   }
   .mobile-menu-button {
     top: 46px;
-    right: 226px;
+    right: 330px;
+  }
+  .nav__button--desktop {
+    display: inline-block;
+  }
+  .nav-bar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 32px 32px 0;
+  }
+  .nav__button {
+    align-self: center;
+    background: $white-color;
+    border-radius: 22px;
+    border: none;
+    font-weight: $font-weight-700;
+    font-size: $font-size-16;
+    line-height: 1.31;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: $primary-color;
+    gap: 20px;
+    padding: 12px 35px;
+    width: 160px;
   }
 }
