--- a/sass/components/_locations.scss
+++ b/sass/components/_locations.scss
@@ -1,169 +1,169 @@
 h4 {
- display: block;
- margin-block-start: 0em;
- margin-block-end: 0em;
- margin-inline-start: 0px;
- margin-inline-end: 0px;
+  display: block;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
 }
 ul {
- display: block;
- list-style-type: disc;
- margin-block-start: 1em;
- margin-block-end: 1em;
- margin-inline-start: 0px;
- margin-inline-end: 0px;
- padding-inline-start: 0px;
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0px;
 }
 
 .unstyled-list {
- list-style: none;
+  list-style: none;
 }
 
 .section {
- background: #fff5f6;
- margin: 0px 16px;
+  background: #fff5f6;
+  margin: 0px 16px;
 }
 .cards-list {
- display: flex;
- gap: 32px;
- &__item {
-  width: 368px;
-  height: 538px;
-  background: #ffffff;
-  box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
-  border-radius: 24px;
-  padding: 40px 85px 40px 40px;
- }
- &__item:hover,
- &__item:focus {
-  box-shadow: 5px 5px 30px -12px #d4144399;
- }
-
- &__title {
-  font-family: "DM Sans";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  color: #ffffff;
-  width: 75.1px;
-  height: 28px;
-  background: #f0d1a5;
-  border-radius: 6px;
   display: flex;
-  line-height: 186%;
-  text-align: center;
-  letter-spacing: 0.04em;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 32px;
- }
- &__title--food-truck {
-  background: #c2e297;
-  width: 138px;
- }
- .location {
-  border-bottom: 1px solid #e1e1e1;
-  &__city {
-   font-family: "DM Sans";
-   font-style: normal;
-   font-weight: 500;
-   font-size: 16px;
-   line-height: 186%;
-   letter-spacing: 0.04em;
-   color: #000000;
-   margin-bottom: 10px;
+  gap: 32px;
+  &__item {
+    width: 368px;
+    height: 538px;
+    background: white;
+    box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+    border-radius: 24px;
+    padding: 40px 85px 40px 40px;
   }
-  &__description {
-   margin-top: -5px;
-   line-height: 183%;
-   letter-spacing: 0.04em;
-   color: #907e82;
-   padding-bottom: 20px;
+  &__item:hover,
+  &__item:focus {
+    box-shadow: 5px 5px 30px -12px #d4144399;
   }
- }
+
+  &__title {
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    color: #ffffff;
+    width: 75.1px;
+    height: 28px;
+    background: #f0d1a5;
+    border-radius: 6px;
+    display: flex;
+    line-height: 186%;
+    text-align: center;
+    letter-spacing: 0.04em;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 32px;
+  }
+  &__title--food-truck {
+    background: #c2e297;
+    width: 138px;
+  }
+  .location {
+    border-bottom: 1px solid #e1e1e1;
+    &__city {
+      font-family: 'DM Sans';
+      font-style: normal;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 186%;
+      letter-spacing: 0.04em;
+      color: #000000;
+      margin-bottom: 10px;
+    }
+    &__description {
+      margin-top: -5px;
+      line-height: 183%;
+      letter-spacing: 0.04em;
+      color: #907e82;
+      padding-bottom: 20px;
+    }
+  }
 }
 .programme {
- border-bottom: 1px solid #e1e1e1;
- padding: 30px 0px;
- &__day {
-  font-family: "DM Sans";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 186%;
-  letter-spacing: 0.04em;
-  color: #000000;
- }
- &__hours {
-  font-family: "DM Sans";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 186%;
-  color: #ffa5ba;
- }
+  border-bottom: 1px solid #e1e1e1;
+  padding: 30px 0px;
+  &__day {
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 186%;
+    letter-spacing: 0.04em;
+    color: #000000;
+  }
+  &__hours {
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 186%;
+    color: #ffa5ba;
+  }
 }
 .contacts {
- padding-top: 25px;
+  padding-top: 25px;
 
- &__phone,
- &__mail {
-  text-decoration: none;
-  font-family: "DM Sans";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 183%;
-  color: #907e82;
- }
+  &__phone,
+  &__mail {
+    text-decoration: none;
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 183%;
+    color: #907e82;
+  }
 }
 .buttons-list {
- display: flex;
- justify-content: center;
- align-items: center;
- gap: 12px;
- padding-top: 60px;
- &__location {
-  width: 198px;
-  height: 44px;
-  background: #d41342;
-  border-radius: 22px;
-  font-family: "DM Sans";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 21px;
   display: flex;
+  justify-content: center;
   align-items: center;
-  text-align: center;
-  justify-content: space-evenly;
-  border: none;
-  color: #ffffff;
- }
- &__location:hover,
- &__location:focus {
-  background-color: rgba(255, 165, 186, 1);
- }
+  gap: 12px;
+  padding-top: 60px;
+  &__location {
+    width: 198px;
+    height: 44px;
+    background: #d41342;
+    border-radius: 22px;
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 21px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: space-evenly;
+    border: none;
+    color: #ffffff;
+  }
+  &__location:hover,
+  &__location:focus {
+    background-color: rgba(255, 165, 186, 1);
+  }
 
- &__franchise {
-  width: 198px;
-  height: 44px;
-  background: #ffffff;
-  border-radius: 22px;
-  font-family: "DM Sans";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 21px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  justify-content: space-evenly;
-  border: none;
-  color: #d41342;
- }
- &__franchise:hover,
- &__franchise:focus {
-  background-color: rgba(255, 165, 186, 1);
- }
+  &__franchise {
+    width: 198px;
+    height: 44px;
+    background: #ffffff;
+    border-radius: 22px;
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 21px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: space-evenly;
+    border: none;
+    color: #d41342;
+  }
+  &__franchise:hover,
+  &__franchise:focus {
+    background-color: rgba(255, 165, 186, 1);
+  }
 }
