--- a/src/partials/about_x.html
+++ b/src/partials/about_x.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>XXX</h1>
-    <h2>AAA</h2>
-    <h3>BBB</h3>
+    <h1>Test proiect</h1>
 </body>
 </html>
