--- a/src/partials/about-advantages.html
+++ b/src/partials/about-advantages.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Titan+One&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
-        <link rel="stylesheet" href="css/main.min.css">
+        <link rel="stylesheet" href="./css/index.min.css">
     </head>
     <body>
         <!--ModalSection-->
