--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,61 +1,81 @@
 <footer class="footer">
-            <div class="container footer__container">
-                <div class="footer__text-box">
-                    <div class="footer__title footer__title--one">
-                        <span class="footer__title--ice-cream">homemade ice cream</span>
-                        <span class="footer__title--made">made</span>
-                    </div>
-                    <div class="footer__title footer__title--two">
-                        <div class="footer__title--word">
-                            <span class="footer__title--letter">w</span>
-                            <span class="footer__title--letter">i</span>
-                            <span class="footer__title--letter">t</span>
-                            <span class="footer__title--letter footer__title--letter-spase">h</span>
-                        </div>
-                        <div class="footer__title--word">
-                            <span class="footer__title--letter footer__title--letter-push">p</span>
-                            <span class="footer__title--letter">a</span>
-                            <span class="footer__title--letter">s</span>
-                            <span class="footer__title--letter">s</span>
-                            <span class="footer__title--letter">i</span>
-                            <span class="footer__title--letter">o</span>
-                            <span class="footer__title--letter">n</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="contacts-box">
-                    <div class="social-box">
-                        <ul class="social-box__links">
-                            <li class="social-box__list">
-                                <a href="https://github.com/" target="_blank" class="social-box__link">
-                                    <svg class="social-box__icon" width="32px" height="32px">
-                                        <use href="/sprite.c55b0485.svg#icon-github"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="social-box__list">
-                                <a href="https://telegram.org/" target="_blank" class="social-box__link">
-                                    <svg class="social-box__icon" width="32px" height="32px">
-                                        <use href="/sprite.c55b0485.svg#icon-telegram"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="social-box__list">
-                                <a href="https://www.facebook.com/" target="_blank" class="social-box__link">
-                                    <svg class="social-box__icon" width="32px" height="32px">
-                                        <use href="/sprite.c55b0485.svg#icon-facebook"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="contact-box">
-                        <span class="contact-box__text">Feel free to contact </span>
-                        <a href="tel:+610383766284" class="contact-box__phone">+61 (0) 383 766 284 </a>
-                    </div>
-                </div>
-            </div>
-            <div class="copyright-box">
-                <p class="copyright-box__text">&copy 2021 - IceCream. All Rights Reserved. </p>
-            </div>
-        </footer>
+  <div class="container footer__container">
+    <div class="footer__text-box">
+      <div class="footer__title footer__title--one">
+        <span class="footer__title--ice-cream">homemade ice cream</span>
+        <span class="footer__title--made">made</span>
+      </div>
+      <div class="footer__title footer__title--two">
+        <div class="footer__title--word">
+          <span class="footer__title--letter">w</span>
+          <span class="footer__title--letter">i</span>
+          <span class="footer__title--letter">t</span>
+          <span class="footer__title--letter footer__title--letter-spase"
+            >h</span
+          >
+        </div>
+        <div class="footer__title--word">
+          <span class="footer__title--letter footer__title--letter-push"
+            >p</span
+          >
+          <span class="footer__title--letter">a</span>
+          <span class="footer__title--letter">s</span>
+          <span class="footer__title--letter">s</span>
+          <span class="footer__title--letter">i</span>
+          <span class="footer__title--letter">o</span>
+          <span class="footer__title--letter">n</span>
+        </div>
+      </div>
+    </div>
+    <div class="contacts-box">
+      <div class="social-box">
+        <ul class="social-box__links">
+          <li class="social-box__list">
+            <a
+              href="https://github.com/"
+              target="_blank"
+              class="social-box__link"
+            >
+              <svg class="social-box__icon" width="32px" height="32px">
+                <use href=""></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-box__list">
+            <a
+              href="https://telegram.org/"
+              target="_blank"
+              class="social-box__link"
+            >
+              <!-- <svg class="social-box__icon" width="32px" height="32px">
+                                        <use href=""></use>
+                                    </svg> -->
+            </a>
+          </li>
+          <li class="social-box__list">
+            <a
+              href="https://www.facebook.com/"
+              target="_blank"
+              class="social-box__link"
+            >
+              <!-- <svg class="social-box__icon" width="32px" height="32px">
+                                        <use href=""></use>
+                                    </svg> -->
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="contact-box">
+        <span class="contact-box__text">Feel free to contact </span>
+        <a href="tel:+610383766284" class="contact-box__phone"
+          >+61 (0) 383 766 284
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="copyright-box">
+    <p class="copyright-box__text">
+      &copy 2021 - IceCream. All Rights Reserved.
+    </p>
+  </div>
+</footer>
