--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -36,9 +36,9 @@
               target="_blank"
               class="social-box__link"
             >
-              <svg class="social-box__icon" width="32px" height="32px">
+              <!-- <svg class="social-box__icon" width="32px" height="32px">
                 <use href=""></use>
-              </svg>
+              </svg> -->
             </a>
           </li>
           <li class="social-box__list">
