--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -3,7 +3,7 @@ html {
 }
 body {
   letter-spacing: 0.03em;
-  font-family: $font-primary;
+  font-family: 'DM Sans', sans-serif;
   min-width: 320px;
   cursor: default;
 }
