--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -36,9 +36,9 @@
               target="_blank"
               class="social-box__link"
             >
-              <!-- <svg class="social-box__icon" width="32px" height="32px">
-                <use href=""></use>
-              </svg> -->
+              <svg class="social-box__icon" width="32px" height="32px">
+                <use href="/src/images/symbol.svg#icon-github"></use>
+              </svg>
             </a>
           </li>
           <li class="social-box__list">
@@ -47,9 +47,9 @@
               target="_blank"
               class="social-box__link"
             >
-              <!-- <svg class="social-box__icon" width="32px" height="32px">
-                                        <use href=""></use>
-                                    </svg> -->
+              <svg class="social-box__icon" width="32px" height="32px">
+                <use href="/src/images/symbol.svg#icon-telegram"></use>
+              </svg>
             </a>
           </li>
           <li class="social-box__list">
@@ -58,9 +58,9 @@
               target="_blank"
               class="social-box__link"
             >
-              <!-- <svg class="social-box__icon" width="32px" height="32px">
-                                        <use href=""></use>
-                                    </svg> -->
+              <svg class="social-box__icon" width="32px" height="32px">
+                <use href="/src/images/symbol.svg#icon-facebook-1"></use>
+              </svg>
             </a>
           </li>
         </ul>
