--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -3,13 +3,13 @@
   margin-right: auto;
   padding: 0 20px;
 
-  max-width: $mobile;
-  @media screen and (min-width: $tablet) {
-    max-width: $tablet;
+  max-width: 480px;
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
     padding: 0 35px;
   }
-  @media screen and (min-width: $desktop) {
-    max-width: $desktop;
+  @media screen and (min-width: 1280px) {
+    max-width: 1280px;
     padding: 0 115px;
   }
 }
@@ -19,7 +19,7 @@ html {
 }
 body {
   letter-spacing: 0.03em;
-  font-family: $font-primary;
+  font-family: 'DM Sans', sans-serif;
   min-width: 320px;
   cursor: default;
 }
