--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -59,7 +59,7 @@
               class="social-box__link"
             >
               <svg class="social-box__icon" width="32px" height="32px">
-                <use href="/src/images/symbol.svg#icon-facebook-1"></use>
+                <use href="/src/images/symbol.svg#icon-Group"></use>
               </svg>
             </a>
           </li>
