added the 3 dots svg

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,14 +1,26 @@
+<!-- Products -->
 <section class="p-section">
+
+    <!-- Titles -->
     <div class="p-titles">
         <p class="p-titles__paragraph">100% natural</p>
         <h1 class="p-titles__heading">Products</h1>
     </div>
 
-
+    <!-- Drinks -->
     <ul class="p-grid unstyled-list">
         <li class="products">
             <img src="/src/images/products-imgs/home-pic1.png" alt="icecream" class="products__image">
             <h3 class="products__subtitle">ice cream</h3>
+            <svg class="products__dots" width="6" height="6">
+                <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
+            </svg>
+            <svg class="products__dots" width="6" height="6">
+                <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
+            </svg>
+            <svg class="products__dots" width="6" height="6">
+                <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
+            </svg>
             <p class="products__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                 incididunt ut labore et</p>
             <button class="products__button">Button 1</button>
@@ -16,6 +28,15 @@
         <li class="products">
             <img src="/src/images/products-imgs/home-pic2.png" alt="ice coffe" class="products__image">
             <h3 class="products__subtitle">ice coffee</h3>
+            <svg class="products__dots" width="6" height="6">
+                <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
+            </svg>
+            <svg class="products__dots" width="6" height="6">
+                <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
+            </svg>
+            <svg class="products__dots" width="6" height="6">
+                <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
+            </svg>
             <p class="products__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                 incididunt ut labore et</p>
             <button class="products__button">Button 2</button>
@@ -23,6 +44,15 @@
         <li class="products">
             <img src="/src/images/products-imgs/home-pic3.png" alt="milkshake" class="products__image">
             <h3 class="products__subtitle">milkshakes</h3>
+            <svg class="products__dots" width="6" height="6">
+                <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
+            </svg>
+            <svg class="products__dots" width="6" height="6">
+                <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
+            </svg>
+            <svg class="products__dots" width="6" height="6">
+                <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
+            </svg>
             <p class="products__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                 incididunt ut labore et</p>
             <button class="products__button">Button 3</button>
