--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -26,7 +26,25 @@
   padding-bottom: 16px;
   font-weight: var(--font-weight-400);
   color: var(--hero-background-secondary-color);
+  font-family: 'Titan One';
+  font-size: 30px;
+  line-height: 34px;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
 }
+
+.p-titles__heading {
+  font-family: 'Titan One';
+  font-weight: var(--font-weight-400);
+  font-size: 58px;
+  line-height: 66px;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--primary-color);
+}
+
+/** Drinks grid **/
 
 .p-grid {
   background-color: greenyellow;
@@ -36,6 +54,9 @@
   margin-bottom: 60px;
 }
 
+.products__dots {
+  background-repeat: repeat-x;
+}
 .products__subtitle {
   color: red;
 }
