--- a/src/partials/products-section.html
+++ b/src/partials/products-section.html
@@ -1,1 +1,32 @@
-<h1>Hello team</h1>
+<section class="products">
+  <div class="container">
+    <p class="products__label">100% natural</p>
+    <h2 class="products__title">PRODUCTS</h2>
+    <ul class="products__list">
+      <li class="products__item">
+        <h3>ice cream</h3>
+        <div>...</div>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et
+        </p>
+      </li>
+      <li class="products__item">
+        <h3>ice coffee</h3>
+        <div>...</div>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et
+        </p>
+      </li>
+      <li class="products__item">
+        <h3>milkshakes</h3>
+        <div>...</div>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et
+        </p>
+      </li>
+    </ul>
+  </div>
+</section>
