--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -11,19 +11,26 @@
     <ul class="p-grid unstyled-list">
         <li class="products">
             <img src="/src/images/products-imgs/home-pic1.png" alt="icecream" class="products__image">
-            <h3 class="products__subtitle">ice cream</h3>
-            <svg class="products__dots" width="6" height="6">
-                <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
-            </svg>
-            <svg class="products__dots" width="6" height="6">
-                <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
-            </svg>
-            <svg class="products__dots" width="6" height="6">
-                <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
-            </svg>
-            <p class="products__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et</p>
-            <button class="products__button">Button 1</button>
+            <div class="products__wrapper">
+                <h3 class="products__subtitle">ice cream</h3>
+                <div class="products__svg">
+                    <svg class="products__svg--dots" width="6" height="6">
+                        <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
+                    </svg>
+                    <svg class="products__dots" width="6" height="6">
+                        <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
+                    </svg>
+                    <svg class="products__dots" width="6" height="6">
+                        <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
+                    </svg>
+                </div>
+                <p class="products__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et</p>
+                <button type="button" class="products__button" style="all: unset;">
+                    <img src="/src/images/products-imgs/arrow-right_no-background.png" alt="arrow"
+                        class="products__arrow">
+                </button>
+            </div>
         </li>
         <li class="products">
             <img src="/src/images/products-imgs/home-pic2.png" alt="ice coffe" class="products__image">
@@ -39,7 +46,9 @@
             </svg>
             <p class="products__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                 incididunt ut labore et</p>
-            <button class="products__button">Button 2</button>
+            <button type="button" class="products__button" style="all: unset;">
+                <img src="/src/images/products-imgs/arrow-right_no-background.png" alt="arrow" class="products__arrow">
+            </button>
         </li>
         <li class="products">
             <img src="/src/images/products-imgs/home-pic3.png" alt="milkshake" class="products__image">
@@ -55,7 +64,9 @@
             </svg>
             <p class="products__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                 incididunt ut labore et</p>
-            <button class="products__button">Button 3</button>
+            <button type="button" class="products__button" style="all: unset;">
+                <img src="/src/images/products-imgs/arrow-right_no-background.png" alt="arrow" class="products__arrow">
+            </button>
         </li>
     </ul>
 
