--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -7,6 +7,7 @@
 }
 
 .p-section {
+  width: 1200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -25,7 +26,7 @@
 .p-titles__paragraph {
   padding-bottom: 16px;
   font-weight: var(--font-weight-400);
-  color: var(--hero-background-secondary-color);
+  color: #ffa5ba;
   font-family: 'Titan One';
   font-size: 30px;
   line-height: 34px;
@@ -41,7 +42,7 @@
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: var(--primary-color);
+  color: #d41443;
 }
 
 /** Drinks grid **/
@@ -54,9 +55,35 @@
   margin-bottom: 60px;
 }
 
-.products__dots {
-  background-repeat: repeat-x;
-}
 .products__subtitle {
-  color: red;
+  font-family: 'Titan One';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.products__svg {
+  display: flex;
+  gap: 4px;
+}
+
+.products__text {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 176%;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+}
+
+.products__arrow {
+  background-color: white;
+  border-radius: 50%;
+  align-self: center;
 }
